test/simple/ill-typed/ho_fun_right.caprice
(* TEST
  include refutable;
*)


let f (g : int -> int) : int -> bool =
  g
